Add backspace btn

--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,10 @@ button {
   width: 50px;
 }
 
-#clear {
+#clear, #backspace {
   background-color: #cf720e;
   margin: 7% 0;
+  margin-left: 3%;
   border-radius: 5px;
 }
 
